--- a/framework/framework.vcxproj.filters
+++ b/framework/framework.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="argtype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="program_support.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="program_support.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
