--- a/property_sheets/sd.props
+++ b/property_sheets/sd.props
@@ -7,5 +7,8 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(SD_ROOT);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>$(SD_ROOT)\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
   </ItemDefinitionGroup>
 </Project>
