--- a/graphics/graphics.vcxproj.filters
+++ b/graphics/graphics.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="shader.cc">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="main.cc">
-      <Filter>source</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="vertex-shader.glsl">
@@ -32,6 +29,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="graphics_api.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="drawable_object.h">
       <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
