--- a/property_sheets/geometry.props
+++ b/property_sheets/geometry.props
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(SD_ROOT)\property_sheets\glm.props" Condition="$(glmPropertySheetImported) == ''"/>
   <PropertyGroup>
     <geometryPropertySheetImported>true</geometryPropertySheetImported>
   </PropertyGroup>
@@ -8,7 +9,7 @@
       <AdditionalIncludeDirectories Condition="$(NoGeometryHeaders) == ''">$(SD_ROOT)\geometry;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>geometry.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
 </Project>
