--- a/geometry/geometry.vcxproj.filters
+++ b/geometry/geometry.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="line.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="line_strip.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="line.cc">
