--- a/primative_shapes/primative_shapes.vcxproj.filters
+++ b/primative_shapes/primative_shapes.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="line.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="line_strip.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
